@@ -9,6 +9,6 @@ LICENSE=GPL-3
 RDEPEND=dev-python/setuptools dev-python/ecdsa dev-python/slowaes gtk? ( dev-python/pygtk:2 ) qt4? ( dev-python/PyQt4 ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( gtk qt4 ) || ( python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
-SRC_URI=http://download.electrum.org/download/Electrum-1.9.2.tar.gz
+SRC_URI=http://download.electrum.org/download/Electrum-1.9.3.tar.gz
 _eclasses_=distutils-r1	49574f07941f70e03dd1bfa59be559be	eutils	4878e7f88afc0ba0866ac112190b0fd4	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	python-r1	b81583006559e9b008883355c9889e29	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=e3b06f898c5071c65e0ccbef59a81fc7
+_md5_=cf18b75c9c955127e33fadeb88ca9e1d
