@@ -4,11 +4,11 @@ DESCRIPTION=PAM base configuration files
 EAPI=5
 HOMEPAGE=http://www.gentoo.org/proj/en/base/pam/
 IUSE=consolekit cracklib debug gnome-keyring minimal mktemp pam_krb5 pam_ssh passwdqc selinux +sha512 systemd
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 -sparc-fbsd -x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux
+KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 -sparc-fbsd -x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=|| ( >=sys-libs/pam-1.1.3 ( sys-auth/openpam || ( sys-freebsd/freebsd-pam-modules sys-netbsd/netbsd-pam-modules ) ) ) consolekit? ( >=sys-auth/consolekit-0.4.5_p2012[pam] ) cracklib? ( >=sys-libs/pam-1.1.3[cracklib] ) gnome-keyring? ( >=gnome-base/gnome-keyring-2.32[pam] ) mktemp? ( sys-auth/pam_mktemp ) pam_krb5? ( || ( >=sys-libs/pam-1.1.3 sys-auth/openpam ) >=sys-auth/pam_krb5-4.3 ) pam_ssh? ( sys-auth/pam_ssh ) passwdqc? ( >=sys-auth/pam_passwdqc-1.0.4 ) selinux? ( >=sys-libs/pam-1.1.3[selinux] ) sha512? ( >=sys-libs/pam-1.1.3 ) systemd? ( >=sys-apps/systemd-44-r1[pam] ) !<sys-apps/shadow-4.1.5-r1 !<sys-freebsd/freebsd-pam-modules-6.2-r1 !<sys-libs/pam-0.99.9.0-r1
 RESTRICT=binchecks
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~flameeyes/pambase/pambase-20120417.tar.bz2 http://dev.gentoo.org/~phajdan.jr/pambase/pambase-20120417.tar.bz2
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=5ed03ef626c3ad69fbfdeddeb868288c
+_md5_=346b649b246bd55f836838b34a8ec2f0
