@@ -3,26 +3,26 @@ Hash: SHA256
 
 DIST Electrum-1.7.4.tar.gz 493103 SHA256 588ae22a1682e0be7e4f695777d36ee011a2b11552acefcfa0814227790cdb19 SHA512 5dda24ea73e2f018c8e1e757c86f33ec2d75f7065d2db95559c0ef983ee48849143219922b29ee585179b1a1b1a865b11b649dbb350dbfba0057126d5a0c59f8 WHIRLPOOL cb32f6976ac13e0a8191c2047e2cdb18f4cfd750f3808885e9bb5d0c1a676c2256e53da78b4163cb177c0fc38dfb71567802819ae9360fa5754da58e7eef3e0b
 DIST Electrum-1.8.1.tar.gz 516341 SHA256 16746e35f2847feb8803aa9b34184ce79d3df88e0ea222a4e602e3b3830ec834 SHA512 0cd345c8ba8e66ab2094a569109029d4f402854da2135acf06ee07d086ac14cd1134c5a5dcaa432fabc31bccfd86782a29dc32465543f03054c0a8c9aeb5feee WHIRLPOOL 9485ade5124b253edbb562ccc6d7a6b7570bcada3e3063db2afdc568517d82aec9495eae4992e83b19fbc7f6205b7378fc237efb7c093be0b23c53baa1e05146
-DIST Electrum-1.9.2.tar.gz 666900 SHA256 525cf42117dccfeae68f44cc2733c1090724589226bfc513352b2d2edd916596 SHA512 c7c4051e8c407e4980ba5a134b61953114fea73da12ef853d571a84d962ec535061b8fa369b6dbb0aa6e166990ca5b239369a51ba78fc5f15c1e009214da830a WHIRLPOOL 1aa528133bba8e689062a9d0329b926b0b53874bd46505524551162891d0001700f87e76d76f8a4192671ad39daeafd1f5555e55233790df6163ae6ab4fa1031
+DIST Electrum-1.9.3.tar.gz 667528 SHA256 9388487ce2558227d952653cdba9e3fff43c5be0910edfb453306cddb95fd9b4 SHA512 f9ac7175177497c74fd19d0e8852e063f5e504e5f080041f757823f4fd1981dca42c8c8cf5af67b64de763ba5622fc2dcb6ce2e5dc3881ecc2b4ca66f45381f0 WHIRLPOOL eccce50800ae3cbd81f716391fa3cad72b7b1ab653b62e38a30179c98969b3b7cb0564cf5a6b562de40aca9c52810752abef54198bb77638e7d72ccf7948ff69
 EBUILD electrum-1.7.4.ebuild 1793 SHA256 664b19a7a0fc7f6a203a3dd799f269495538e726cf9930135969e5336d9bc05a SHA512 1b7c9d4972c3cb3178e3e4ab809f8c14aef7baba445af71c90df82161455034e051e8333f601694dc48015678e089adb79ed977b0ebca150730dc7c14c815b4e WHIRLPOOL 2616bf23653a0245565cedb43850713b19c351059ed4a41300b4a4d19cab4a616893302536cd204949399d42606798e71f70c0464f76f8fc6affacf6d6d972d1
 EBUILD electrum-1.8.1.ebuild 1818 SHA256 043068ad65ae7d1fcfce2b8ebecd7fd25fe4e32719aa100239b276914057db04 SHA512 b3eefa04bbe62954b1ca5a83a12f4bea0e04ad8118573d13d5e8da39838b61123523cab2755ab0eb25eca1693b471cf176f10936021d6d88a14b8f43d4231961 WHIRLPOOL 803e3f824d669a34d536059f6083fc91febb8baa896d01fbb96cded4b0d9b3a80ee81d789dfcf1cfa7289d371577aa0e7c303b392a73e7a5b296456b7fde5df7
-EBUILD electrum-1.9.2.ebuild 1818 SHA256 0055a2d6a88e6ead95d3cce1be38a125a47ecd04ccea0f2306bc729c1761bf12 SHA512 f080e92ef4a4435b20d8db64a72c00a35dba02467b648404365d64777f73ac47d1fb092333d200302da72a638197df64a46b6efd82a1cb0f5a88464429446c9d WHIRLPOOL ef1b459738a27c8266c7a7a490c3e64d77d61231b59e3f7345cbcbb95b8c1cf6c4ddfa89b48de55b93b5170c1374fd800817f173fb76b7a933ae130006635be1
-MISC ChangeLog 2182 SHA256 e7becd6179bc637c6dcf658a5a89548f2341f4d4b32b4b99fc3a1ea169562dd3 SHA512 7af5cb3f2e51d99864096b6e15d14f38f9366d3e0e99e7bdf3824d6b6f20326373b7a614685e067387538e64e594bade6d70eed7e66b3b3b0a4dd209c9eb8081 WHIRLPOOL 45b3324d56f1ea9b2a7293e623f9e7aa5e27761907159c9649a0078da86d9a88aa63a0984376e7bdec3af96f5c1b4e6419c62f93b0f6d12dd6ea675231eb0bd1
+EBUILD electrum-1.9.3.ebuild 1853 SHA256 a6a0498a27bc2139d10dd421fd6a5848a882d934f97ef9342decaf15e8edf46f SHA512 5ddaadb5d00ac6fdf251fecc204e5763a90ed794d3cc159abc8a070721b7c761c64455e23b6fe34538da18c95f81ad29e94f71022693478bb1b17b3298eb2558 WHIRLPOOL 56e70679fb78e84af0ee04b623a5baf3d0f0fcb427e86e233c23f12759d456e5b751b44ce99f39ca7251eb3c6edf5f0f972f13f6f6f5124685509eb2b6473859
+MISC ChangeLog 2334 SHA256 d487238498c05481544fc981c974739dfc8415a4f4da2fc58b6ffc4683d21080 SHA512 310535afc8e92d1fad84fd16d149cfe6fd182a0c392592a157e458b86dd312a32c9d98cdddf5b9d7e7572a658fd6beba698cf31d296616f49f1ce9279b0d36e0 WHIRLPOOL b2b2ac79a59d3f05641dca788b3f7e71282604206037c53a5a2ade9801060285a9c2f18c63cf5f30463b2247815cc3e387ae5ff6475b02dcc34b8e7e818c9c2f
 MISC metadata.xml 472 SHA256 e97c20e859b288822e281765af714b85c70d48e4c84c2925e66a36182d1eb10d SHA512 1a77af9adfde40ba53f17f85a3e2c172a161ee01c81ea9d7ae02aa6764b4f03e24c48b3f39eb91d60369246801f3a2b8027640cb7b89a1afe9e5c43078dc9b58 WHIRLPOOL cf7b85cc0b0ed5d881fdacdf60730c41e09a7a462ece923dc81cf8c4aa0ef575f9d5eeac9897d5ae71159dd32541f91d3c0f2ddcac789fda36851b0ac97c8a88
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSej+kAAoJEJOE+m71LUu6JsYQAJPxAlhM2NZ5xNoUsN3huBFd
-gHoX4wvHMpTIuTHpD3LC3Hh1kOIdOS5DS/ouB6onRQNkgzddPiohphAMONjOGc7y
-n5mKw9U6c5qgpGKzMajVWFbu5LL9os4a0Z+fGusnSMHNOVSsDn4Uf4f3B/aUjAGU
-N3Sr2Z5mZ0kZnYJb/uAljcWnjR+3ZCZDtGIWt/QZcpdq7iKFjj7wy7QdI2cBOmGn
-t2+mSiUirW7oKgHzMmY9LYLBunpLFyZulpZKBo7Mue4ZLu0C1QZtqKS/qJqK/kcL
-BfVliXw40+sJt8zzr5DY9dAd6bZk/xPUfF19O7rAIxsVqzvO5/UfA9ChpRnvoxnz
-ihS1280BTAtgw50JgboDs2qfWhYHPTFg6FFpc8ztyKT0Gsdq7sS6MaSgD9vu/13m
-cpitnrkDMpBldTvQ3P5Z5e06eo3nchz3af/pDh1XsK5mXRUIBJ9BJzHEqCDZGgZd
-UzO01ejbVDIYmcLxdSN/Lkp2W0c5kktcQxqnL2gUaxKSbGcC8SLWX5a+rq/fQi/I
-OMpNVWDOrBvCKHiLpmcJVf3M1R2B2y69sfk5bfsDlwhFhPTXTXg26QNq+IhGj3Jd
-/7gQiyzZkKr9WNUF7GCqFFJP5RJ1TvoKh/hQy53pF0zP/NF8jp4vIgb5c6OlXrQv
-naYKrJihpQjTcSF/ypiu
-=Oay2
+iQIcBAEBCAAGBQJSgkJXAAoJEJOE+m71LUu6i4QP/1HwgSUpuYPetxfQgsyI4gkC
+IBnPQWjt7wvtxunZVHwYx2Rvwk4QriWAZzJzfF4R8AE4LLvDwtJgfwEVHZ59dvlq
+x58WMRoS2ueqNpZd/xheZrNdxascGW7ws08APPXjRDB3rn8KrrZqPNxkDghdKUw6
+wvo1Qi3Z1wDU8jwUa4kVNA1nRlWb8h3sn8KczYpP9GlhRuPv2JiIQ/mqKR0IvyYE
+0sKIgLe+GDCwgVe6lWmEqpXs3qcUG3MgVZiD+C5du1a/1HbxHqn5+EpC0YLbI3HP
+RS3wa746rir0YSCyWmCQGUy1jmltsOvRnmszH/tKBBTrMKDcNlbCce6XRQKvyQxM
+dVAD3S/PCNSslO+JFR8G5B4shRk6TgCHLBtV7XNF2jiY49G5OWIDgVyVJhSnc1iI
+QsloBIO+d+0MHDY8aEES64jpwqrS0gr74pkoy8CmoyVkH3zd7w7Sh2F7OtBTvBd6
+y1lMvNWHzvNjxDws1jnFPIkISlE+F5v9CeNSwoMj2p/Zx4w7rcVOJ0p8+Fsk8Si+
+fxnnAN4d/+rmdlJbjexxRaYnKFuS3ZpYPfbhVa2wQoLIhiNUFqZpzs4ytcZOCRGJ
+Tvv7AeYXBkij4BguFh8JIBTrfun54Uqco8GS1hks+h9Q0WAYUwfn+tANL+ZGcDvZ
+LlFcMx0zbDNCIH9/aY70
+=DAib
 -----END PGP SIGNATURE-----
