@@ -1,6 +1,9 @@
 # ChangeLog for sys-auth/pambase
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.126 2013/10/27 15:10:21 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.127 2013/11/12 14:39:12 jer Exp $
+
+  12 Nov 2013; Jeroen Roovers <jer@gentoo.org> pambase-20120417-r3.ebuild:
+  Stable for HPPA (bug #491034).
 
 *pambase-20120417-r3 (27 Oct 2013)
 
