@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/electrum
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/electrum/ChangeLog,v 1.15 2013/11/06 13:09:48 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/electrum/ChangeLog,v 1.16 2013/11/12 14:59:11 blueness Exp $
+
+*electrum-1.9.3 (12 Nov 2013)
+
+  12 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +electrum-1.9.3.ebuild,
+  -electrum-1.9.2.ebuild:
+  Version bump
 
   06 Nov 2013; Anthony G. Basile <blueness@gentoo.org> -electrum-1.7.3.ebuild,
   -electrum-1.8.ebuild, -electrum-1.9.ebuild:
